# vibestore_shopify_customer_service_chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
app/agents/: builder.py  config.py  runner.py
app/agents/middleware/: content_filter_middleware.py  sanitize_middleware.py
app/agents/tools/: __init__.py  escalate_to_human.py  knowledge_base_tools.py  memory_tools.py  order_lookup.py  registry.py  search_product.py  shopify_shop_info.py
app/api/: deps.py  main.py  models.py
app/api/router/: admin.py
app/channels/core/: base_adapter.py  models.py
app/channels/telegram/: adapter.py
app/channels/web/: adapter.py
app/channels/whatsapp/: adapter.py
app/config/: settings.py
app/services/datastore/: datastore.py
app/services/escalations/: controller.py  models.py
app/services/llms/: manager.py
app/services/memory/: controller.py  models.py
app/services/shopify/: controllers.py  models.py
app/ui/: streamlit_app.py
app/utils/: retry.py
infra/: Dockerfile  Dockerfile.lightrag  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.swarm.yml  docker-compose.yml  nginx.conf  setup-secrets.sh
scripts/: reset_lightrag.py
tests/: agent_runner_test.py  agent_tests.py  llm_manager_test.py  shopiy_controller_test.py
